Shipyak=2.7.5 and shipkit 2.0